# BountyForge

./: .env.test  .gitignore  Dockerfile  Dockerfile.backend  Dockerfile.frontend  README.md  config.yaml.dist  config.yaml.test  docker-compose.build.yml  docker-compose.yml  docker-example.env  pyproject.toml  requirements.txt
src/backend/: app.py
src/bountyforge/: config.py  main.py  module_manager.py  results.py  test.py
src/bountyforge/api/: __init__.py  config_api.py  endpoints.py  recon.py  scan.py
src/bountyforge/core/: __init__.py  analyze.py  engine.py  manager.py  module_base.py  module_manager.py  registry.py  scan_pipeline.py  simulate.py  storage.py  task.py  tasks.py
src/bountyforge/modules/: __init__.py  ffuf.py  httpx.py  nmap.py  nuclei.py  recon.py  reconnaissance.py  subdomain_bruteforce.py  subfinder.py
src/bountyforge/scripts/: run.py  update_version.py
src/bountyforge/utils/: __init__.py  logging.py  sender.py
src/frontend/: Dockerfile  app.py
src/frontend/static/css/: style.css
src/frontend/templates/: base.html  dashboard.html  launch_scan.html  login.html  report_details.html  reports.html  scan_details.html  scan_history.html  scan_settings.html
tests/: conftest.py  test_config.py
