[tool.poetry]
name = "bountyforge"
version = "0.0.1"
description = "Framework for bug bounty"
authors = [
    "Danil F. <evtdanilf@yandex.ru>"
]
license = "Proprietary"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^2.3.2"
PyYAML = "^6.0.1"
tinydb = "^4.8.0"
paho-mqtt = "^2.0.0"
pytz = "^2024.2"
gunicorn = "^23.0.0"
pika = "^1.3.2"
python-dotenv = "^1.0.0"
pydantic = "^2.10.0"
pydantic-settings = "^2.6.1"
python-dateutil = "^2.8.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pyinstaller = {version = "^6.11.1", python="^3.10,<3.13"}

[tool.poetry.scripts]
dockertrap = "dockertrap.scripts.run:run"

[tool.poetry.urls]
"Homepage" = "https://github.com/EvtDanya/BountyForge"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
    ".", "src",
]
asyncio_mode = "auto"
python_files = "tests.py test_*.py *_tests.py"
